--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,8 +9,9 @@ html {
 }
 
 body {
-  height: 100%;
+  min-height: 100%;
   overflow-x: hidden;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   touch-action: pan-y;
 }
